let's try to use a script to generate the dmg, instead of getting crazy with maven plugins order